L3 Info/Compilation/TD4/_build/default/td_4/dyck_parser/Dyck_right.mly

%start <unit> main

%%

main: 
| seq EOF {}
| EOF      {}

seq:
| word seq             {} 
| word                 {}

word: 
| A seq B      {}
| A B           {}
